# gui-agent-memory

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml  setup_clone.py
.github/workflows/: ci.yml
gui_agent_memory/: __init__.py  config.py  ingestion.py  log_utils.py  main.py  models.py  retriever.py  storage.py
gui_agent_memory/prompts/: experience_distillation.txt  judge_decision.txt  keyword_extraction.txt
memory_system/logs/: failed_learning_tasks.jsonl
scripts/: check.sh
src/gui_agent_memory/: __init__.py  config.py  ingestion.py  main.py  models.py  retriever.py  retry_utils.py  storage.py
src/gui_agent_memory/prompts/: keyword_extraction.txt
tests/: __init__.py  conftest.py  test_config.py  test_error_handling.py  test_ingestion.py  test_init.py  test_log_utils.py  test_main.py  test_models.py  test_retriever.py  test_storage.py
tests/mocks/: api_responses.json  test_fixtures.json
